<resources>
    <string name="app_name">Tiếng Hàn Tổng Hợp</string>
    <string name="name_logo">한국어</string>
    <string name="name_logo2">공보해요</string>
    <string name="content_description">image not exit</string>
    <string name="title_vocabulary">Từ vựng</string>
    <string name="title_vocabulary_small">Tổng hợp từ vựng tiếng Hàn</string>
    <string name="title_grammar">Ngữ pháp</string>
    <string name="book_1">Quyển 1</string>
    <string name="book_2">Quyển 2</string>
    <string name="book_3">Quyển 3</string>
    <string name="book_4">Quyển 4</string>
    <string name="book_5">Quyển 5</string>
    <string name="book_6">Quyển 6</string>
    <string name="title_book1">Từ vựng sơ cấp 1</string>
    <string name="title_logo_header">Study Korean</string>
    <string name="title_title_header">Hello everyone</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_empty"> </string>
    <string name="menu_home"> Trang chủ </string>
    <string name="menu_exam"> Đề thi</string>
    <string name="menu_study">Luyện tâp</string>
    <string name="menu_favorite">Yêu thích</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="menu_user_setting">Cài đặt người dùng</string>
    <string name="title_home_detail1">Vocabulary \n basic 1</string>
    <string name="title_home_detail2">Vocabulary \n basic 2</string>
    <string name="title_home_detail3">Vocabulary \n basic 3</string>
    <string name="title_home_detail4">Vocabulary \n basic 4</string>
    <string name="title_home_detail5">Vocabulary \n basic 5</string>
    <string name="title_home_detail6">Vocabulary \n basic 6</string>
    <string name="btn_close">Đóng</string>
    <string name="flash_card">Flash cards</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
