<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_navigate_header"
    android:gravity="bottom"
    android:orientation="vertical">
    
    <RelativeLayout
        android:padding="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginBottom="@dimen/dimen_15"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <androidx.cardview.widget.CardView
            android:layout_marginEnd="@dimen/dimen_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_view"
            app:cardCornerRadius="40dp"
            android:layout_marginRight="@dimen/dimen_10">
            
            <ImageView
                android:src="@drawable/flag_korean"
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                android:contentDescription="@string/content_description" />
        </androidx.cardview.widget.CardView>
        
        <TextView
            style="@style/StyleFontNavigate"
            android:id="@+id/tv_logo"
            android:layout_toRightOf="@+id/card_view"
            android:text="@string/title_logo_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/card_view" />
    
        <TextView
            style="@style/StyleFontTitleNavigate"
            android:layout_below="@+id/tv_logo"
            android:layout_toRightOf="@+id/card_view"
            android:text="@string/title_title_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/card_view" />
    </RelativeLayout>

</LinearLayout>